finish even-minute feature and adding PoorBeanDefenishion